Adjusting Nav Bar Settings

--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
               href="./index.html"
               role="menuitem"
               title="Home"
-              class="navigation-list__item"
+              class="navigation-list__item--inactive"
               >Home</a
             >
           </li>
@@ -52,7 +52,7 @@
               href="./about.html"
               role="menuitem"
               title="About Me"
-              class="navigation-list__item"
+              class="navigation-list__item--inactive"
               >About Me</a
             >
           </li>
@@ -61,7 +61,7 @@
               href="./work.html"
               role="menuitem"
               title="Portfolio"
-              class="navigation-list__item"
+              class="navigation-list__item--inactive"
               >Portfolio</a
             >
           </li>
@@ -70,7 +70,7 @@
               href="./contact.html"
               role="menuitem"
               title="Contact"
-              class="navigation-list__item navigation-list__item--active"
+              class="navigation-list__item--active"
               >Contact</a
             >
           </li>
