--- a/index.html
+++ b/index.html
@@ -1,92 +1,147 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <!-- CSS reset  -->
-    <link rel="stylesheet" type="text/css"
-        href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css" />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
+    />
     <!-- Importing Roboto Font -->
     <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> -->
     <!-- Importing IBM Plex Sans Font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
+      rel="stylesheet"
+    />
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>Portfolio | Home</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="page-header">
-        <a href="./index.html"><img id="HeaderLogoImage" src="img/FullLogo3.png"
-                alt="Full Logo for Developer Elizabeth Howell" class="page-header__item" /></a>
-        <nav class="main-navigation page-header__item">
-            <ul role="menubar" class="navigation-list brackets">
-                <li role="presentation" class="navigation-list__item">
-                    <a href="./index.html" role="menuitem" title="Home"
-                        class="navigation-list__item navigation-list__item--active">Home</a>
-                </li>
-                <li role="presentation" class="navigation-list__item">
-                    <a href="./about.html" role="menuitem" title="About Me" class="navigation-list__item">About Me</a>
-                </li>
-                <li role="presentation" class="navigation-list__item">
-                    <a href="./work.html" role="menuitem" title="Portfolio" class="navigation-list__item">Portfolio</a>
-                </li>
-                <li role="presentation" class="navigation-list__item">
-                    <a href="./contact.html" role="menuitem" title="Contact" class="navigation-list__item">Contact</a>
-                </li>
-            </ul>
-        </nav>
+      <!-- <a href="./index.html"><img id="HeaderLogoImage" src="img/FullLogo3.png"
+                alt="Full Logo for Developer Elizabeth Howell" class="page-header__item" /></a> -->
+      <nav class="main-navigation page-header__item">
+        <ul role="menubar" class="navigation-list brackets">
+          <li role="presentation" class="navigation-list__item">
+            <a
+              href="./index.html"
+              role="menuitem"
+              title="Home"
+              class="navigation-list__item--active"
+              >Home</a
+            >
+          </li>
+          <li role="presentation" class="navigation-list__item">
+            <a
+              href="./about.html"
+              role="menuitem"
+              title="About Me"
+              class="navigation-list__item--inactive"
+              >About Me</a
+            >
+          </li>
+          <li role="presentation" class="navigation-list__item">
+            <a
+              href="./work.html"
+              role="menuitem"
+              title="Portfolio"
+              class="navigation-list__item--inactive"
+              >Portfolio</a
+            >
+          </li>
+          <li role="presentation" class="navigation-list__item">
+            <a
+              href="./contact.html"
+              role="menuitem"
+              title="Contact"
+              class="navigation-list__item--inactive"
+              >Contact</a
+            >
+          </li>
+        </ul>
+      </nav>
     </header>
     <main>
-        <article id="welcometext" class="profile">
-            <img src="img/ProfileImage-Square.jpg" alt="Round image of Portfolio developer" id="profilepic"
-                class="profile__portrait" />
-            <div class="profile__text">
-                <p>I am a Mechanical Engineer turned  
-                    <br> Full-Stack Web Developer 
-                    <br> living in Austin, TX.</p>
-                <a class="button1"  href="./work.html" title="Link to the portfolio page">Check out some of my work</a>
-                <br>
-                <br>
-                <a class="button1"  href="./contact.html" title="Link to the contact page">Let's Collaborate!</a>
-            </div>
-        </article>
-        <br />
-        <br />
+      <article id="welcometext" class="profile">
+        <img
+          src="img/ProfileImage-Square.jpg"
+          alt="Round image of Portfolio developer"
+          id="profilepic"
+          class="profile__portrait"
+        />
+        <div class="profile__text">
+          <p>
+            I am a Mechanical Engineer turned <br />
+            Full-Stack Web Developer <br />
+            living in Austin, TX.
+          </p>
+          <a
+            class="button1"
+            href="./work.html"
+            title="Link to the portfolio page"
+            >Check out some of my work</a
+          >
+          <br />
+          <br />
+          <a
+            class="button1"
+            href="./contact.html"
+            title="Link to the contact page"
+            >Let's Collaborate!</a
+          >
+        </div>
+      </article>
+      <br />
+      <br />
     </main>
     <footer id="FindMeIcons" class="page-footer">
-        <p>Find me on</p>
-        <div class="social-media svgBackgroung">
-            <!-- X Icon -->
-            <a href="https://twitter.com/eahowell89" target="_blank" title="Find me on X"><img
-                    src="img/twitter.svg" alt="X icon" class="xSVG"/></a>
-            <!-- LinkedIn Icon -->
-            <a href="https://www.linkedin.com/in/elizabethannhowell/" target="_blank" title="Find me on LinkedIn"><img
-                    src="img/linkedin.svg" alt="LinkedIn" class="linkedSVG"/></a>
-            <!-- GitHub Icon -->
-            <a href="https://github.com/eahowell" target="_blank" title="Find me on GitHub"><img src="img/github.svg"
-                    alt="Github" class="gitSVG"/></a>
-        </div>
-        <br />
-        <a href="#">Back to top</a>
-        <br />
-        <br />
-        <br />
+      <p>Find me on</p>
+      <div class="social-media svgBackgroung">
+        <!-- X Icon -->
+        <a
+          href="https://twitter.com/eahowell89"
+          target="_blank"
+          title="Find me on X"
+          ><img src="img/twitter.svg" alt="X icon" class="xSVG"
+        /></a>
+        <!-- LinkedIn Icon -->
+        <a
+          href="https://www.linkedin.com/in/elizabethannhowell/"
+          target="_blank"
+          title="Find me on LinkedIn"
+          ><img src="img/linkedin.svg" alt="LinkedIn" class="linkedSVG"
+        /></a>
+        <!-- GitHub Icon -->
+        <a
+          href="https://github.com/eahowell"
+          target="_blank"
+          title="Find me on GitHub"
+          ><img src="img/github.svg" alt="Github" class="gitSVG"
+        /></a>
+      </div>
+      <br />
+      <a href="#">Back to top</a>
+      <br />
+      <br />
+      <br />
     </footer>
     <!-- <script src="js/tota11y.min.js"></script> -->
-</body>
-<!-- CREDITS -->
-<!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
-<!--"Roboto Slab" Font by Christian Robertson, Google Fonts, License: APACHE LICENSE, VERSION 2.0. Available at: https://www.apache.org/licenses/LICENSE-2.0-->
-<!--"Linkedin Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104493/linkedin_icon-->
-<!--"X Twitter Icons" by IconFinder, Icon Finder. https://www.iconfinder.com/icons/11244080/x_twitter_elon%20musk_twitter%20new%20logo_icon-->
-<!--"Code repository, github, repository icon" by Pixel Bazaar, Icon Finder. License: CC BY 3.0 DEED. Available at: https://creativecommons.org/licenses/by/3.0/-->
-
+  </body>
+  <!-- CREDITS -->
+  <!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
+  <!--"Roboto Slab" Font by Christian Robertson, Google Fonts, License: APACHE LICENSE, VERSION 2.0. Available at: https://www.apache.org/licenses/LICENSE-2.0-->
+  <!--"Linkedin Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104493/linkedin_icon-->
+  <!--"X Twitter Icons" by IconFinder, Icon Finder. https://www.iconfinder.com/icons/11244080/x_twitter_elon%20musk_twitter%20new%20logo_icon-->
+  <!--"Code repository, github, repository icon" by Pixel Bazaar, Icon Finder. License: CC BY 3.0 DEED. Available at: https://creativecommons.org/licenses/by/3.0/-->
 </html>
