Add Medium Contact Link and Icon

--- a/about.html
+++ b/about.html
@@ -11,10 +11,6 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
     />
-    <!-- Importing Roboto Font -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> -->
     <!-- Importing IBM Plex Sans Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -143,6 +139,12 @@
           target="_blank"
           title="Find me on GitHub"
           ><img src="img/github.svg" alt="Github" class="gitSVG"
+        /></a>
+        <a
+          href="https://medium.com/@ehowell.webdev"
+          target="_blank"
+          title="Find me on Medium"
+          ><img src="img/medium.svg" alt="Medium" class="mediumSVG"
         /></a>
       </div>
       <br />
