--- a/work.html
+++ b/work.html
@@ -11,10 +11,6 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
     />
-    <!-- Importing Roboto Font -->
-    <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet"> -->
     <!-- Importing IBM Plex Sans Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -168,6 +164,12 @@
           title="Find me on GitHub"
           ><img src="img/github.svg" alt="Github" class="gitSVG"
         /></a>
+        <a
+          href="https://medium.com/@ehowell.webdev"
+          target="_blank"
+          title="Find me on Medium"
+          ><img src="img/medium.svg" alt="Medium" class="mediumSVG"
+        /></a>
       </div>
       <br />
       <a href="#">Back to top</a>
@@ -175,7 +177,6 @@
       <br />
       <br />
     </footer>
-    <!-- <script src="js/tota11y.min.js"></script> -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
@@ -183,10 +184,4 @@
     ></script>
     <script src="js/projects.js"></script>
   </body>
-  <!-- CREDITS -->
-  <!--Title of the Image" by [Artist's Name], Icon Finder. License: [License Type]. Available at: [URL]-->
-  <!--"Roboto Slab" Font by Christian Robertson, Google Fonts, License: APACHE LICENSE, VERSION 2.0. Available at: https://www.apache.org/licenses/LICENSE-2.0-->
-  <!--"Linkedin Icon" by Picons.me, Icon Finder. https://www.iconfinder.com/icons/104493/linkedin_icon-->
-  <!--"X Twitter Icons" by IconFinder, Icon Finder. https://www.iconfinder.com/icons/11244080/x_twitter_elon%20musk_twitter%20new%20logo_icon-->
-  <!--"Code repository, github, repository icon" by Pixel Bazaar, Icon Finder. License: CC BY 3.0 DEED. Available at: https://creativecommons.org/licenses/by/3.0/-->
 </html>
