--- a/about.html
+++ b/about.html
@@ -18,6 +18,9 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
+    <!-- Import Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>Portfolio | About</title>
@@ -25,53 +28,7 @@
 
   <body>
     <header class="page-header">
-      <a href="./index.html"
-        ><img
-          id="HeaderLogoImage"
-          src="img/FullLogo3.png"
-          alt="Full Logo for Developer Elizabeth Howell"
-          class="page-header__item"
-      /></a>
-      <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="navigation-list brackets">
-          <li role="presentation" class="navigation-list__item">
-            <a
-              href="./index.html"
-              role="menuitem"
-              title="Home"
-              class="navigation-list__item--inactive"
-              >Home</a
-            >
-          </li>
-          <li role="presentation" class="navigation-list__item">
-            <a
-              href="./about.html"
-              role="menuitem"
-              title="About Me"
-              class="navigation-list__item--active"
-              >About Me</a
-            >
-          </li>
-          <li role="presentation" class="navigation-list__item">
-            <a
-              href="./work.html"
-              role="menuitem"
-              title="Portfolio"
-              class="navigation-list__item--inactive"
-              >Portfolio</a
-            >
-          </li>
-          <li role="presentation" class="navigation-list__item">
-            <a
-              href="./contact.html"
-              role="menuitem"
-              title="Contact"
-              class="navigation-list__item--inactive"
-              >Contact</a
-            >
-          </li>
-        </ul>
-      </nav>
+      <!-- Navigation will be inserted here by navbar.js -->
     </header>
     <main>
       <article id="Bio" class="bio">
@@ -153,6 +110,10 @@
       <br />
       <br />
     </footer>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Navbar JS -->
+    <script src="js/navbar.js"></script>
     <!-- React Scripts -->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react/17.0.2/umd/react.production.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/react-dom/17.0.2/umd/react-dom.production.min.js"></script>
