--- a/work.html
+++ b/work.html
@@ -19,12 +19,7 @@
       rel="stylesheet"
     />
     <!-- Import Bootstrap -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
@@ -33,53 +28,7 @@
 
   <body>
     <header class="page-header">
-      <a href="./index.html"
-        ><img
-          id="HeaderLogoImage"
-          src="img/FullLogo3.png"
-          alt="Full Logo for Developer Elizabeth Howell"
-          class="page-header__item"
-      /></a>
-      <nav class="main-navigation page-header__item">
-        <ul role="menubar" class="navigation-list brackets">
-          <li role="presentation" class="navigation-list__item">
-            <a
-              href="./index.html"
-              role="menuitem"
-              title="Home"
-              class="navigation-list__item--inactive"
-              >Home</a
-            >
-          </li>
-          <li role="presentation" class="navigation-list__item">
-            <a
-              href="./about.html"
-              role="menuitem"
-              title="About Me"
-              class="navigation-list__item--inactive"
-              >About Me</a
-            >
-          </li>
-          <li role="presentation" class="navigation-list__item">
-            <a
-              href="./work.html"
-              role="menuitem"
-              title="Portfolio"
-              class="navigation-list__item--active"
-              >Portfolio</a
-            >
-          </li>
-          <li role="presentation" class="navigation-list__item">
-            <a
-              href="./contact.html"
-              role="menuitem"
-              title="Contact"
-              class="navigation-list__item--inactive"
-              >Contact</a
-            >
-          </li>
-        </ul>
-      </nav>
+      <!-- Navigation will be inserted here by navbar.js -->
     </header>
     <main role="main">
       <section class="section">
@@ -177,11 +126,10 @@
       <br />
       <br />
     </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-      crossorigin="anonymous"
-    ></script>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Navbar JS -->
+    <script src="js/navbar.js"></script>
     <script src="js/projects.js"></script>
   </body>
 </html>
