--- a/about.html
+++ b/about.html
@@ -66,11 +66,19 @@
           >
 
           <section id="Employment" class="section">
-            <h2 class="text-center text-light mb-4 fw-bold">Where I've Worked</h2>
+            <h2 class="text-center text-light mb-4 fw-bold">
+              Where I've Worked
+            </h2>
             <div
               class="d-flex justify-content-center align-items-center flex-wrap company-logos"
             >
-              <a href="https://www.tesla.com/" target="_blank" rel="noopener noreferrer" title="Tesla" aria-label="Tesla">
+              <a
+                href="https://www.tesla.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="Tesla"
+                aria-label="Tesla"
+              >
                 <img
                   src="img/tesla_motors_logo.jfif"
                   alt="Tesla Company Logo"
@@ -78,7 +86,13 @@
                   style="max-height: 65px; margin: 0 0.5rem"
                 />
               </a>
-              <a href="https://www.gp.com/" target="_blank" rel="noopener noreferrer" title="Georgia Pacific LLC" aria-label="Georgia Pacific LLC">
+              <a
+                href="https://www.gp.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="Georgia Pacific LLC"
+                aria-label="Georgia Pacific LLC"
+              >
                 <img
                   src="img/georgia_pacific_llc_logo.jfif"
                   alt="Georgia Pacific LLC Logo"
@@ -86,7 +100,13 @@
                   style="max-height: 65px; margin: 0 0.5rem"
                 />
               </a>
-              <a href="https://www.eaton.com/" target="_blank" rel="noopener noreferrer" title="Eaton" aria-label="Eaton">
+              <a
+                href="https://www.eaton.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="Eaton"
+                aria-label="Eaton"
+              >
                 <img
                   src="img/eaton_logo.jfif"
                   alt="Eaton Logo"
@@ -94,7 +114,13 @@
                   style="max-height: 65px; margin: 0 0.5rem"
                 />
               </a>
-              <a href="https://www.kraftheinzcompany.com/" target="_blank" rel="noopener noreferrer" title="The Kraft Heinz Company" aria-label="The Kraft Heinz Company">
+              <a
+                href="https://www.kraftheinzcompany.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="The Kraft Heinz Company"
+                aria-label="The Kraft Heinz Company"
+              >
                 <img
                   src="img/the_kraft_heinz_company_logo.jfif"
                   alt="The Kraft Heinz Company Logo"
@@ -102,7 +128,13 @@
                   style="max-height: 65px; margin: 0 0.5rem"
                 />
               </a>
-              <a href="https://www.ge.com/" target="_blank" rel="noopener noreferrer" title="General Electric" aria-label="General Electric">
+              <a
+                href="https://www.ge.com/"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="General Electric"
+                aria-label="General Electric"
+              >
                 <img
                   src="img/ge_logo.jfif"
                   alt="GE Logo"
@@ -110,12 +142,22 @@
                   style="max-height: 65px; margin: 0 0.5rem"
                 />
               </a>
-              <a href="https://www.ufl.edu/" target="_blank" rel="noopener noreferrer" title="University of Florida" aria-label="University of Florida">
+              <a
+                href="https://www.ufl.edu/"
+                target="_blank"
+                rel="noopener noreferrer"
+                title="University of Florida"
+                aria-label="University of Florida"
+              >
                 <img
                   src="img/uflorida_logo.jfif"
                   alt="University of Florida Logo"
                   class="img-fluid rounded-circle"
-                  style="max-height: 65px; margin: 0 0.5rem; border: #FA4616 2px solid"
+                  style="
+                    max-height: 65px;
+                    margin: 0 0.5rem;
+                    border: #fa4616 2px solid;
+                  "
                 />
               </a>
             </div>
@@ -139,7 +181,7 @@
       <div class="social-media svgBackgroung">
         <!-- X Icon -->
         <a
-          href="https://twitter.com/eahowell89"
+          href="https://twitter.com/ehowell_webdev"
           target="_blank"
           title="Find me on X"
           ><img src="img/twitter.svg" alt="X icon" class="xSVG"
