--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       type="text/css"
       href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.min.css"
     />
-   
+
     <!-- Importing IBM Plex Sans Font -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,8 +20,11 @@
       rel="stylesheet"
     />
     <!-- Import Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
     <title>Portfolio | Home</title>
@@ -69,7 +72,7 @@
       <div class="social-media svgBackgroung">
         <!-- X Icon -->
         <a
-          href="https://twitter.com/eahowell89"
+          href="https://twitter.com/ehowell_webdev"
           target="_blank"
           title="Find me on X"
           ><img src="img/twitter.svg" alt="X icon" class="xSVG"
@@ -100,7 +103,7 @@
       <br />
       <br />
       <br />
-    </footer>    
+    </footer>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Navbar JS -->
