--- a/work.html
+++ b/work.html
@@ -19,7 +19,10 @@
       rel="stylesheet"
     />
     <!-- Import Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
     <!-- CSS Style Sheet -->
     <link rel="stylesheet" type="text/css" href="css/styles.css" />
@@ -94,7 +97,7 @@
       <div class="social-media svgBackgroung">
         <!-- X Icon -->
         <a
-          href="https://twitter.com/eahowell89"
+          href="https://twitter.com/ehowell_webdev"
           target="_blank"
           title="Find me on X"
           ><img src="img/twitter.svg" alt="X icon" class="xSVG"
