Adjusted formatting of resume button

--- a/about.html
+++ b/about.html
@@ -61,8 +61,8 @@
             applications that make an impact.
           </p>
           <br />
-          <a href="files/Resume-Howell.pdf" class="button1" download
-            >Download my Resume Here!</a
+          <a href="files/Resume-Howell.pdf" class="button1" target="_blank" title="View my Resume" style="margin: 10px;">
+            Check Out My Resume!</a
           >
 
           <section id="Employment" class="section">
