Updated About Me Intro

--- a/about.html
+++ b/about.html
@@ -38,27 +38,26 @@
         <div class="bio__text bio__item">
           <h1>A little about me</h1>
           <p>
-            Hi, I'm <strong class="strong">Elizabeth Howell</strong>, a
-            passionate problem-solver based in Austin, TX. I grew up in a small
-            town near Niceville, FL, where I was lucky enough to spend my time
-            near the stunning beaches of Destin and the peaceful Choctawhatchee
-            Bay.
+            Hi, I'm <strong class="strong">Liz</strong>, a
+            mechanical engineer turned web developer based in Austin, TX. I grew up in a small
+            town in Florida along the Choctawhatchee Bay.
           </p>
           <p>
             For the past 11 years, I've thrived as a mechanical engineer in the
-            manufacturing industry, where I specialized in troubleshooting
-            complex systems and improving processes. Now, I’m leveraging my
-            technical background to transition into web development — a field
-            that ignites my creativity and love for problem-solving in new ways.
+            manufacturing industry, where I specialized in troubleshooting complex systems and improving processes.
+            Spending time working with operators frustrated with the tools in place that were outdated, difficult
+            to use, and extremely labor intensive to use, it prompted me to make a shift to a new career where I
+            can be a part of creating solutions.
           </p>
           <p>
-            I graduated from the University of Florida in 2012 with a
+            I graduated from the University of Florida 🐊 in 2012 with a
             <strong class="strong"
               >Bachelor of Science in Mechanical Engineering</strong
             >
-            and a <strong class="strong">Minor in Bio-mechanics</strong>. My
-            journey has now led me to build interactive, user-friendly web
-            applications that make an impact.
+            and a <strong class="strong">Minor in Bio-mechanics</strong>. I have now shifted to full-stack web development with a passion
+            for building apps that are functional, easy to use, and most importantly, genuinely help people. I am
+            looking for a team where I can continue to grow my skills and contribute to meaningful, user-focused
+            projects.
           </p>
           <br />
           <a href="files/Resume-Howell.pdf" class="button1" target="_blank" title="View my Resume" style="margin: 10px;">
