Add Picture to About Page and AdjustFormatting

--- a/about.html
+++ b/about.html
@@ -38,142 +38,154 @@
         <div class="bio__text bio__item">
           <h1>A little about me</h1>
           <p>
-            Hi, I'm <strong class="strong">Liz</strong>, a
-            mechanical engineer turned web developer based in Austin, TX. I grew up in a small
-            town in Florida along the Choctawhatchee Bay.
+            Hi, I'm <strong class="strong">Liz</strong>, a mechanical engineer
+            turned web developer based in Austin, TX. I grew up in a small town
+            in Florida along the Choctawhatchee Bay.
           </p>
           <p>
             For the past 11 years, I've thrived as a mechanical engineer in the
-            manufacturing industry, where I specialized in troubleshooting complex systems and improving processes.
-            Spending time working with operators frustrated with the tools in place that were outdated, difficult
-            to use, and extremely labor intensive to use, it prompted me to make a shift to a new career where I
-            can be a part of creating solutions.
+            manufacturing industry, where I specialized in troubleshooting
+            complex systems and improving processes. Spending time working with
+            operators frustrated with the tools in place that were outdated,
+            difficult to use, and extremely labor intensive to use, it prompted
+            me to make a shift to a new career where I can be a part of creating
+            solutions.
           </p>
           <p>
             I graduated from the University of Florida 🐊 in 2012 with a
             <strong class="strong"
               >Bachelor of Science in Mechanical Engineering</strong
             >
-            and a <strong class="strong">Minor in Bio-mechanics</strong>. I have now shifted to full-stack web development with a passion
-            for building apps that are functional, easy to use, and most importantly, genuinely help people. I am
-            looking for a team where I can continue to grow my skills and contribute to meaningful, user-focused
-            projects.
+            and a <strong class="strong">Minor in Bio-mechanics</strong>. I have
+            now shifted to full-stack web development with a passion for
+            building apps that are functional, easy to use, and most
+            importantly, genuinely help people. I am looking for a team where I
+            can continue to grow my skills and contribute to meaningful,
+            user-focused projects.
           </p>
-          <br />
-          <a href="files/Resume-Howell.pdf" class="button1" target="_blank" title="View my Resume" style="margin: 10px;">
+        </div>
+        <div class="bio__img-container">
+          <img
+            src="img/ProfilePic.png"
+            alt="Liz Howell"
+            class="bio__img img-fluid d-flex justify-content-start"
+          />
+          <a
+            href="files/Resume-Howell.pdf"
+            class="button1"
+            target="_blank"
+            title="View my Resume"
+            style="margin: 10px"
+          >
             Check Out My Resume!</a
           >
-
-          <section id="Employment" class="section">
-            <h2 class="text-center text-light mb-4 fw-bold">
-              Where I've Worked
-            </h2>
-            <div
-              class="d-flex justify-content-center align-items-center flex-wrap company-logos"
-            >
-              <a
-                href="https://www.tesla.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                title="Tesla"
-                aria-label="Tesla"
-              >
-                <img
-                  src="img/tesla_motors_logo.jfif"
-                  alt="Tesla Company Logo"
-                  class="img-fluid rounded-circle"
-                  style="max-height: 65px; margin: 0 0.5rem"
-                />
-              </a>
-              <a
-                href="https://www.gp.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                title="Georgia Pacific LLC"
-                aria-label="Georgia Pacific LLC"
-              >
-                <img
-                  src="img/georgia_pacific_llc_logo.jfif"
-                  alt="Georgia Pacific LLC Logo"
-                  class="img-fluid rounded-circle"
-                  style="max-height: 65px; margin: 0 0.5rem"
-                />
-              </a>
-              <a
-                href="https://www.eaton.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                title="Eaton"
-                aria-label="Eaton"
-              >
-                <img
-                  src="img/eaton_logo.jfif"
-                  alt="Eaton Logo"
-                  class="img-fluid rounded-circle"
-                  style="max-height: 65px; margin: 0 0.5rem"
-                />
-              </a>
-              <a
-                href="https://www.kraftheinzcompany.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                title="The Kraft Heinz Company"
-                aria-label="The Kraft Heinz Company"
-              >
-                <img
-                  src="img/the_kraft_heinz_company_logo.jfif"
-                  alt="The Kraft Heinz Company Logo"
-                  class="img-fluid rounded-circle"
-                  style="max-height: 65px; margin: 0 0.5rem"
-                />
-              </a>
-              <a
-                href="https://www.ge.com/"
-                target="_blank"
-                rel="noopener noreferrer"
-                title="General Electric"
-                aria-label="General Electric"
-              >
-                <img
-                  src="img/ge_logo.jfif"
-                  alt="GE Logo"
-                  class="img-fluid rounded-circle"
-                  style="max-height: 65px; margin: 0 0.5rem"
-                />
-              </a>
-              <a
-                href="https://www.ufl.edu/"
-                target="_blank"
-                rel="noopener noreferrer"
-                title="University of Florida"
-                aria-label="University of Florida"
-              >
-                <img
-                  src="img/uflorida_logo.jfif"
-                  alt="University of Florida Logo"
-                  class="img-fluid rounded-circle"
-                  style="
-                    max-height: 65px;
-                    margin: 0 0.5rem;
-                    border: #fa4616 2px solid;
-                  "
-                />
-              </a>
-            </div>
-          </section>
-
-          <!-- Skills Section -->
-          <section id="IconGrid" class="section">
-            <div class="skills-container">
-              <div id="icon-grid-root"></div>
-              <!-- <div id="skills-chart-root"></div> -->
-            </div>
-          </section>
-
-          <br />
-          <br />
         </div>
       </article>
+      <div class="icon-section">
+        <section id="Employment" class="section">
+          <h2 class="text-center text-light mb-4 fw-bold">Where I've Worked</h2>
+          <div
+            class="d-flex justify-content-center align-items-center flex-wrap company-logos"
+          >
+            <a
+              href="https://www.tesla.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              title="Tesla"
+              aria-label="Tesla"
+            >
+              <img
+                src="img/tesla_motors_logo.jfif"
+                alt="Tesla Company Logo"
+                class="img-fluid rounded-circle"
+                style="max-height: 65px; margin: 0 0.5rem"
+              />
+            </a>
+            <a
+              href="https://www.gp.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              title="Georgia Pacific LLC"
+              aria-label="Georgia Pacific LLC"
+            >
+              <img
+                src="img/georgia_pacific_llc_logo.jfif"
+                alt="Georgia Pacific LLC Logo"
+                class="img-fluid rounded-circle"
+                style="max-height: 65px; margin: 0 0.5rem"
+              />
+            </a>
+            <a
+              href="https://www.eaton.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              title="Eaton"
+              aria-label="Eaton"
+            >
+              <img
+                src="img/eaton_logo.jfif"
+                alt="Eaton Logo"
+                class="img-fluid rounded-circle"
+                style="max-height: 65px; margin: 0 0.5rem"
+              />
+            </a>
+            <a
+              href="https://www.kraftheinzcompany.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              title="The Kraft Heinz Company"
+              aria-label="The Kraft Heinz Company"
+            >
+              <img
+                src="img/the_kraft_heinz_company_logo.jfif"
+                alt="The Kraft Heinz Company Logo"
+                class="img-fluid rounded-circle"
+                style="max-height: 65px; margin: 0 0.5rem"
+              />
+            </a>
+            <a
+              href="https://www.ge.com/"
+              target="_blank"
+              rel="noopener noreferrer"
+              title="General Electric"
+              aria-label="General Electric"
+            >
+              <img
+                src="img/ge_logo.jfif"
+                alt="GE Logo"
+                class="img-fluid rounded-circle"
+                style="max-height: 65px; margin: 0 0.5rem"
+              />
+            </a>
+            <a
+              href="https://www.ufl.edu/"
+              target="_blank"
+              rel="noopener noreferrer"
+              title="University of Florida"
+              aria-label="University of Florida"
+            >
+              <img
+                src="img/uflorida_logo.jfif"
+                alt="University of Florida Logo"
+                class="img-fluid rounded-circle"
+                style="
+                  max-height: 65px;
+                  margin: 0 0.5rem;
+                  border: #fa4616 2px solid;
+                "
+              />
+            </a>
+          </div>
+        </section>
+  
+        <!-- Skills Section -->
+        <section id="IconGrid" class="section">
+          <div class="skills-container">
+            <div id="icon-grid-root"></div>
+            <!-- <div id="skills-chart-root"></div> -->
+          </div>
+        </section>
+      </div>
     </main>
     <footer id="FindMeIcons" class="page-footer">
       <p>Find me on</p>
